Update AuthenticationUserDTO.java